--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "~1.9.0",
     "nodemon": "^1.18.6",
     "sequelize": "~4.41.0",
-    "mysql2": "^1.6.4"
+    "mysql2": "^1.6.4",
+    "bcrypt": "^3.0.2"
   }
 }
