--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^1.18.6",
     "sequelize": "~4.41.0",
     "mysql2": "^1.6.4",
-    "bcrypt": "^3.0.2"
+    "bcrypt": "^3.0.2",
+    "jsonwebtoken": "^8.3.0"
   }
 }
